--- a/ui/networkinformation.ui
+++ b/ui/networkinformation.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
+    <width>2180</width>
     <height>615</height>
    </rect>
   </property>
@@ -54,7 +54,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_00">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_00">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -100,7 +100,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_01">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_01">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -146,7 +146,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_02">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_02">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -192,7 +192,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_03">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_03">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -238,7 +238,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_04">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_04">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -284,7 +284,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_05">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_05">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -330,7 +330,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_06">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_06">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -376,7 +376,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_07">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_07">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -422,7 +422,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_08">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_08">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -468,7 +468,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_09">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_09">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -514,7 +514,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_10">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_10">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -560,7 +560,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_11">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_11">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -606,7 +606,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_12">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_12">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -652,7 +652,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_13">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_13">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -698,7 +698,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_14">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_14">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -744,7 +744,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_15">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_15">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -790,7 +790,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_16">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_16">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -836,7 +836,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_17">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_17">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -882,7 +882,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_18">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_18">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -928,7 +928,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_19">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_19">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -974,7 +974,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_20">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_20">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -1020,7 +1020,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_21">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_21">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -1066,7 +1066,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_22">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_22">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -1112,7 +1112,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_23">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_23">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -1158,7 +1158,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_24">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_24">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -1204,7 +1204,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_25">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_25">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -1250,7 +1250,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_26">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_26">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -1296,7 +1296,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_27">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_27">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -1342,7 +1342,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_28">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_28">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -1388,7 +1388,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_29">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_29">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -1434,7 +1434,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_30">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_30">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -1480,7 +1480,7 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QwtPlot" name="qwtPlotNetworkCardHistory_31">
+          <widget class="PlotWidget" name="qwtPlotNetworkCardHistory_31">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -1659,10 +1659,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>QwtPlot</class>
-   <extends>QFrame</extends>
-   <header>qwt_plot.h</header>
-   <container>1</container>
+   <class>PlotWidget</class>
+   <extends>QGraphicsView</extends>
+   <header location="global">pyqtgraph</header>
   </customwidget>
  </customwidgets>
  <resources/>
